twitter-1/public/css/style.css
/* ... */
.menu .menu-top {
    height : 60px;
    width :25%;
    margin-left : 65%;
    box-shadow: 7px 7px 25px 0 rgba(0, 0, 0, 0);
    background : none;
    border: none;
}

#menu3 button{
    font-size : 100%;
}

h2{
    font-family: 'Outfit', sans-serif;
    font-size: 55%;
    font-weight: 900; 
    text-align: center; 
    color: white;
    margin-top: 2%;
}

#jeu {
    font-size: 20%;
}

.container-btn-end-game {
    top: 78%;
    position: absolute;
    display: flex;
    justify-content: space-evenly;
    width: 100%;
}

.btn-end-game {
    border-radius: 80px;
    box-shadow: rgba(0, 0, 0, 0.25) 7px 7px 25px 0;
    border: none;
    padding: 5%;
    justify-content: space-around;
    font-family: Outfit, sans-serif;
    font-size: 90%;
    font-weight: 700;
}

div{
    /*font-size: 1em;*/
    color : black;
}

#choix {
    display: flex;
    justify-content: space-around;
    margin-top: -15%;
}

#choix button{
    font-family: "Outfit", sans-serif;
    font-weight:500;
    font-size:100%;
}

#third-slide{
    background: #f1de68;
}

#candidats{
    width:100%;
    height:80%;
    margin-top: 0;
    margin-left: 0;
}


.button-candidat{
    width: 30%;
    /*height: 40px;*/
    height:25%;
    /*padding: 0;*/
    padding-bottom : 4%;
    border: none;
    background: none;
    /*margin-bottom: 6%;*/
    margin-top:0.5%;
    font-size : 16%;
}

.profile3{
    max-width: 18%;
    max-height: 180%;
    border-radius: 50%;
    border: 1px solid white;
    position: absolute;
    top:20%;
    left:2%;
    box-shadow: 7px 7px 25px rgba(0, 0, 0, 0.25);
}

.profile2{
    max-width: 70%;
    max-height: 70%;
    border-radius: 50%;
    border : 3px solid white;
    box-shadow: 7px 7px 25px rgba(0, 0, 0, 0.25);
}

.profile{
    border-radius: 50%;
    margin-left: 38%;
    border : 3px solid white;
    box-shadow: 7px 7px 25px rgba(0, 0, 0, 0.25);
}

.nom-candidat{
    text-align: center;
    font-size: 30%;
}

table{
    font-size: 18%;
    margin: auto;
}

td{
    margin-left:1em;
}

th, td {
    padding: 5px;
}

#tweets{
    padding:1px;
}


.box-tweet {
    background: white;
    height: 35vh;
    width: 80%;
    border-radius: 70px;
    margin-top: 5vh;
    margin-left: auto;
    margin-right: auto;
    overflow: visible !important;
    font-size: 18%;
    position : absolute;
    top:44%;
    left : 10%;
    box-shadow: 7px 7px 25px rgba(0, 0, 0, 0.25);
}

.box-tweet-top {
    background: white;
    height: 35vh;
    width: 95%;
    border-radius: 70px;
    margin-top: 2vh;
    margin-left: auto;
    margin-right: auto;
    overflow: visible !important;
    box-shadow: 7px 7px 25px rgba(0, 0, 0, 0.25);
}


.candidattweet {
    overflow: hidden;
    border-radius: inherit;
}


.candidattweet .tweet p{
    padding: 5%;
    margin-left : 2%;
    height : 30vh;
    width:80%;
    text-align: center;

}

.candidattweet .swiper-pagination{
    padding-top:5%;
    margin-top : 5%;
}

.table-candidat {
    margin-top:-17%;
    margin-bottom : 5%;
    /*margin: auto;*/
    font-size: initial;

}

.no-tweet{
    margin:auto;
}

.ThemeGraphe {
    position: absolute;
    bottom: 10%;
    left: 7.5%;
}

.scroll-tip {
    position: absolute;
    font-size: 20%;
    font-family: "Outfit", sans-serif;
    text-align: center;
    left: 25%;
    bottom:5%;
    color: white;

}

.hovertree-upslide {
    position: absolute;
    /*left: calc(50% - 10px);*/
    display:inline-block;
    left:0px;
    right:0px;
    bottom:0px;
    margin-left:auto;
    margin-right:auto;

    width: 20px;
    height: 20px;
    z-index: 99;
    animation: hovertreemove 1.5s infinite ease-in-out;
    -webkit-animation: hovertreemove 1.5s infinite ease-in-out;
    background-image:url(http://hovertree.com/texiao/css3/29/hovertreeup.png);
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center center;
}

@keyframes hovertreemove {
    0% {
        opacity: 0.1;
        transform: translate3d(0,8px,0);
    }
    50% {
        opacity: 1;
        transform: translate3d(0,-8px,0);
    }
    100% {
        opacity: 0.1;
        transform: translate3d(0,-16px,0);
    }
}
@-webkit-keyframes hovertreemove {
    0% {
        opacity: 0.1;
        -webkit-transform: translate3d(0,8px,0);
    }
    50% {
        opacity: 1;
        -webkit-transform: translate3d(0,-8px,0);
    }
    100% {
        opacity: 0.1;
        -webkit-transform: translate3d(0,-16px,0);
    }
}

#comment{
    margin-top : 6%;
    text-align : center;
    text-decoration: underline;
    font-size : 120%;
}

#fourth-slide{
    background-color: #fff;
    font-size: 18%;
}

#top-select{
    background-color: #dbdbdb;
    width : 50%;
    height: 6%;
    border : 2px solid black;
    border-radius: 10% / 50%;
    box-shadow: 7px 7px 25px 0 rgba(0,0,0,0.25);
    text-align: center;
    margin: auto;
    margin-top: 5%;
    display: flex;
    padding: 2.5%;
}

#tweet-theme {
    padding-left:4%;
}

#tweet-theme p{
    width: 90%;
    height: 15%;
    text-align: center; 
    color: black;
    position:relative;
    padding-top:5%;
    padding-bottom:5%;
    padding-right:2%;
    padding-left:2%;
    border-radius: 25% / 40%; 
    background: #fff; 
    box-shadow: 7px 7px 25px 0 rgba(0,0,0,0.25);
    margin: auto;
    margin-top: 0.5em;
}

.swiper .toptweet {
    border-radius: 70px;
    height: inherit;
}

.swiper .toptweet #tweetname{
    padding: 5%;
    margin-left : 2%;
    height : 1vh;
    text-align: center;

}

.swiper .toptweet #tweetcontent{
    margin-left : 22%;
    width:70%;
    text-align: initial;

}

#theme-pic{
    justify-content: center;
    display: flex;
}

img#theme {
    height: 100px;
    border-radius: 100% / 100%; 
    background: #fff; 
    box-shadow: 7px 7px 25px 0 rgba(0,0,0,0.25);
    margin-top: 2vh;

}

#table-top {
    margin: auto;
    font-size: initial;

}

#last-slide{
    font-size: 100%;
    background: #EF7767;
}
/* ... */

